Fix blog scrolling and overflow

--- a/css/style2.css
+++ b/css/style2.css
@@ -542,44 +542,3 @@ input, button {
 .skip-nav-link:focus {
   transform: translateY(0px);
 }
-
-/* ====
-   Blog
-   ==== */
-
-.grid-even-collum {
-  display: grid;
-  gap: 1rem;
-  grid-template-columns: 60%;
-  justify-content: center;
-  align-content: center;
-  height:100%;
-  overflow-y: scroll;
-}
-
-
-.articles {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-bottom: 1rem;
-  background: white;
-  background-image: url('../Images/blog_background.jpg');
-}
-
-.articles:empty {
-  display: none;
-}
-
-.articles p {
-  font-size: 14px;
-  font-family: Helvetica;
-  color: black;
-  text-shadow: none;
-}
-
-.articles h1, .articles h2, .articles h3 {
-  width:100%;
-  text-align:center;
-  color: black;
-  text-shadow: none;
-}
